2003-10-15  Rodrigo Moya <rodrigo@ximian.com>

	* src/libical/ical.h: added from HEAD.

2003-10-09  Jeffrey Stedfast  <fejj@ximian.com>

	* src/libical/Makefile.am: Fixed INCLUDES and don't autogenerate
	ical.h, no need to. Plus it caused problems anyways.

	* src/libical/*.[c,h]: Fixed the #includes

	* src/libicalss/Makefile.am: Fixed INCLUDES and don't autogenerate
	icalss.h, no need to. Plus it caused problems anyways.

	* src/libicalss/*.[c,h]: Fixed the #includes

	* tests/*.c: #include <libical/ical.h> rather
	than "ical.h"

	* tests/Makefile.am: Fixed INCLUDES

	* examples/*.c: #include <libical/ical.h> rather
	than "ical.h"

	* examples/Makefile.am: Fixed INCLUDES

	* src/libicalvcal/icalvcal.h: #include <libical/ical.h> which is
	no longer autogenerated.

	* src/libicalvcal/icalvcal.c (icalvcal_convert_with_defaults): Use
	the proper macro names from config.h

2003-10-07  Dan Winship  <danw@ximian.com>

	* src/libical/Makefile.am: Remove libical-static

	* src/libicalcap/Makefile.am: and libicalcap-static

2003-09-23  Hans Petter Jansson  <hpj@ximian.com>

	* configure.in: Remove flex check. Set ICAL_ERRORS_ARE_FATAL to 0.

	* src/libicalss/icalgauge.c (icalgauge_new_from_sql): Don't use
	globals struct. Remove calls to sslex_init(), _extra(),
	ss_scan_string(). Use a global pointer icalss_yy_gauge to hold context.
	Call ssparse() with no arguments.

	* src/libicalss/icalsslexer.l: Remove options reentrant and
	bison-bridge. Rename variables, change function invocations to comply
	with flex 2.5.4.
	(icalss_input): Add function to read input.

	* src/libicalss/icalssyacc.y (yyextra): Remove.
	(select_list)
	(from_list)
	(where_clause)
	(where_list): yyextra -> icalss_yy_gauge

	* src/libicalss/icalsslexer.c:
	* src/libicalss/icalssyacc.c:
	* src/libicalss/icalssyacc.h: Add generated files back to repository.
	They don't belong there, but that's not my problem.

2003-09-22  Hans Petter Jansson  <hpj@ximian.com>
